# social-auto-upload

./: .gitignore  AlTask.md  README.md  TASK.md  conf.example.py  omnibull_frontend  sau_backend.py
OmniDriveAdmin/: CLAUDE_HANDOFF.md  README.md  package.json
cloud_demo/: README.md  app.py  cloud_demo.db
db/: createTable.py
docs/: engineering_readiness_baseline.md  module_relationships.md  omnidrive_admin_api_contract.md  omnidrive_admin_backend_workstreams.md  omnidrive_admin_implementation_plan.md  omnidrive_ai_smoke.md  omnidrive_backend_plan.md  omnidrive_billing_distribution_api.md  omnidrive_billing_grant.md  omnidrive_openapi.yaml  omnidrive_parallel_work_items.md  omnidrive_phase1_api_contract.md  omnidrive_support_recharge_api.md  project_structure.md  sau_runtime_architecture.md  system_management_baseline.md
myUtils/: auth.py  login.py  postVideo.py
omnidrive_admin_frontend/: CLAUDE_HANDOFF.md  README.md  package.json
omnidrive_backend/: .env.example  README.md  pyproject.toml
omnidrive_backend/app/: main.py
omnidrive_backend/app/api/: deps.py  router.py
omnidrive_backend/app/api/routes/: accounts.py  agent.py  auth.py  devices.py  skills.py  tasks.py
omnidrive_backend/app/core/: config.py  enums.py  security.py
omnidrive_backend/app/db/: base.py  init_db.py  session.py
omnidrive_backend/app/models/: base.py  device.py  login.py  platform_account.py  product_skill.py  publish_task.py  user.py
omnidrive_backend/app/schemas/: account.py  agent.py  auth.py  base.py  device.py  skill.py  task.py
omnidrive_cloud/: .env.example  README.md  (+2 more)
(+341 files in other folders)
