[project]
name = "omnidrive-backend"
version = "0.1.0"
description = "Production-oriented cloud backend for OmniDrive"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.44,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "python-jose[cryptography]>=3.5.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "redis>=6.4.0,<7.0.0",
  "boto3>=1.40.0,<2.0.0",
  "httpx>=0.28.1,<1.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

